chore: update dependencies in requirements.txt to latest versions and configure Vite server to run on port 8201

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-sqlalchemy==2.0.25
-pydantic==2.5.3
-python-jose[cryptography]==3.3.0
-passlib[argon2]==1.7.4
-python-multipart==0.0.6
-pytest==7.4.4
-pytest-asyncio==0.23.3
-httpx==0.26.0
+fastapi
+uvicorn[standard]
+sqlalchemy
+pydantic
+python-jose[cryptography]
+passlib[argon2]
+python-multipart
+pytest
+pytest-asyncio
+httpx
+uvicorn
