feat: 改善配置安全性，移除敏感資訊追蹤

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,8 @@ dist/
 # OS
 .DS_Store
 Thumbs.db
+# 敏感配置檔案（使用 .template 作為範本）
+WebDiner.Api/appsettings.json
+WebDiner.Api/appsettings.Development.json
+WebDiner.Api/appsettings.*.json
+!WebDiner.Api/appsettings.json.template
