--- a/WebDiner.Api/appsettings.json.template
+++ b/WebDiner.Api/appsettings.json.template
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=WebDiner;Trusted_Connection=True;TrustServerCertificate=True;",
+    "DefaultConnection": "Server=YOUR_SERVER;Database=YOUR_DATABASE;User Id=YOUR_USER;Password=YOUR_PASSWORD;TrustServerCertificate=True;",
     "SqliteConnection": "Data Source=webdiner.db"
   },
   "Jwt": {
-    "SecretKey": "SuperSecretKeyForWebDinerApplication2024!ChangeThisInProduction",
+    "SecretKey": "YOUR_SECRET_KEY_MIN_32_CHARACTERS_LONG",
     "Issuer": "WebDiner.Api",
     "Audience": "WebDiner.Frontend",
     "ExpirationMinutes": 30
