--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@types/node": "^20.17.9",
     "@vitejs/plugin-vue": "^5.2.4",
     "eslint": "^9.39.1",
     "eslint-plugin-vue": "^10.2.0",
