feat: update deployment script for improved directory management and streamline frontend build process; add type definitions to package-lock.json

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ WebDiner.Api/appsettings.json
 WebDiner.Api/appsettings.Development.json
 WebDiner.Api/appsettings.*.json
 !WebDiner.Api/appsettings.json.template
+publish/
