feat: update deployment documentation and configuration for self-contained .NET API, enhance appsettings template, and improve project structure in solution file

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ WebDiner.Api/appsettings.Development.json
 WebDiner.Api/appsettings.*.json
 !WebDiner.Api/appsettings.json.template
 publish/
+publish-selfcontained/clrjit.dll
