--- a/WebDiner.Api/WebDiner.Api.csproj
+++ b/WebDiner.Api/WebDiner.Api.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <!-- SPA 前端路徑 -->
+    <SpaRoot>..\frontend\</SpaRoot>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,5 +24,22 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
   </ItemGroup>
 
-</Project>
+  <!-- 前端檔案不包含在 .NET 專案中 (由 Solution Items 顯示) -->
+  <ItemGroup>
+    <Content Remove="$(SpaRoot)**" />
+    <None Remove="$(SpaRoot)**" />
+  </ItemGroup>
 
+  <!-- 發布時建置前端 -->
+  <Target Name="PublishRunWebpack" AfterTargets="ComputeFilesToPublish">
+    <Exec WorkingDirectory="$(SpaRoot)" Command="npm install" />
+    <Exec WorkingDirectory="$(SpaRoot)" Command="npm run build" />
+
+    <!-- 複製前端建置結果到 wwwroot -->
+    <ItemGroup>
+      <DistFiles Include="$(SpaRoot)dist\**" />
+    </ItemGroup>
+    <Copy SourceFiles="@(DistFiles)" DestinationFolder="$(PublishDir)wwwroot\%(RecursiveDir)" />
+  </Target>
+
+</Project>
