--- a/WebDiner.Api/appsettings.json.template
+++ b/WebDiner.Api/appsettings.json.template
@@ -1,10 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=YOUR_SERVER;Database=YOUR_DATABASE;User Id=YOUR_USER;Password=YOUR_PASSWORD;TrustServerCertificate=True;",
-    "SqliteConnection": "Data Source=webdiner.db"
+    "DefaultConnection": "Server=YOUR_SERVER;Database=YOUR_DATABASE;User Id=YOUR_USER;Password=YOUR_PASSWORD;TrustServerCertificate=True;"
   },
   "Jwt": {
-    "SecretKey": "YOUR_SECRET_KEY_MIN_32_CHARACTERS_LONG",
+    "SecretKey": "YOUR_SecretKey",
     "Issuer": "WebDiner.Api",
     "Audience": "WebDiner.Frontend",
     "ExpirationMinutes": 30
@@ -17,4 +16,3 @@
   },
   "AllowedHosts": "*"
 }
-
