--- a/WebDiner.Api/web.config
+++ b/WebDiner.Api/web.config
@@ -5,9 +5,9 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="dotnet" 
-                  arguments=".\WebDiner.Api.dll" 
-                  stdoutLogEnabled="false" 
+      <aspNetCore processPath=".\WebDiner.Api.exe" 
+                  arguments="" 
+                  stdoutLogEnabled="true" 
                   stdoutLogFile=".\logs\stdout" 
                   hostingModel="InProcess">
         <environmentVariables>
@@ -17,4 +17,3 @@
     </system.webServer>
   </location>
 </configuration>
-
