chore: update .gitignore to exclude publish directories and modify publish profile for framework-dependent deployment

--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,5 @@ WebDiner.Api/appsettings.Development.json
 WebDiner.Api/appsettings.*.json
 !WebDiner.Api/appsettings.json.template
 publish/
-publish-selfcontained/clrjit.dll
+publish-selfcontained
+publish-framework-dependent
